rstsr-mkl-ffi/src/cblas/ffi_extern.rs

    pub fn cblas_cgeru(
        Layout: CBLAS_LAYOUT,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        A: *mut c_void,
        lda: MKL_INT,
    );
    pub fn cblas_cgerc(
        Layout: CBLAS_LAYOUT,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        A: *mut c_void,
        lda: MKL_INT,
    );
    pub fn cblas_cher(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f32,
        X: *const c_void,
        incX: MKL_INT,
        A: *mut c_void,
        lda: MKL_INT,
    );
    pub fn cblas_chpr(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f32,
        X: *const c_void,
        incX: MKL_INT,
        A: *mut c_void,
    );
    pub fn cblas_cher2(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        A: *mut c_void,
        lda: MKL_INT,
    );
    pub fn cblas_chpr2(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        Ap: *mut c_void,
    );
    pub fn cblas_zhemv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_zhbmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_zhpmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: *const c_void,
        Ap: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_zgeru(
        Layout: CBLAS_LAYOUT,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        A: *mut c_void,
        lda: MKL_INT,
    );
    pub fn cblas_zgerc(
        Layout: CBLAS_LAYOUT,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        A: *mut c_void,
        lda: MKL_INT,
    );
    pub fn cblas_zher(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f64,
        X: *const c_void,
        incX: MKL_INT,
        A: *mut c_void,
        lda: MKL_INT,
    );
    pub fn cblas_zhpr(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f64,
        X: *const c_void,
        incX: MKL_INT,
        A: *mut c_void,
    );
    pub fn cblas_zher2(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        A: *mut c_void,
        lda: MKL_INT,
    );
    pub fn cblas_zhpr2(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        Ap: *mut c_void,
    );
    pub fn cblas_sgemm(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        B: *const f32,
        ldb: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
    );
    pub fn cblas_sgemm_batch(
        Layout: CBLAS_LAYOUT,
        TransA_Array: *const CBLAS_TRANSPOSE,
        TransB_Array: *const CBLAS_TRANSPOSE,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        K_Array: *const MKL_INT,
        alpha_Array: *const f32,
        A_Array: *mut *const f32,
        lda_Array: *const MKL_INT,
        B_Array: *mut *const f32,
        ldb_Array: *const MKL_INT,
        beta_Array: *const f32,
        C_Array: *mut *mut f32,
        ldc_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_sgemm_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *const f32,
        ldb: MKL_INT,
        strideb: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_sgemmt(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        B: *const f32,
        ldb: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
    );
    pub fn cblas_ssymm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        B: *const f32,
        ldb: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
    );
    pub fn cblas_ssyrk(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
    );
    pub fn cblas_ssyrk_batch_strided(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        stridea: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_ssyrk_batch(
        Layout: CBLAS_LAYOUT,
        Uplo_array: *const CBLAS_UPLO,
        Trans_array: *const CBLAS_TRANSPOSE,
        N_array: *const MKL_INT,
        K_array: *const MKL_INT,
        alpha_array: *const f32,
        A_array: *mut *const f32,
        lda_array: *const MKL_INT,
        beta_array: *const f32,
        C_array: *mut *mut f32,
        ldc_array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_ssyr2k(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        B: *const f32,
        ldb: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
    );
    pub fn cblas_strmm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        B: *mut f32,
        ldb: MKL_INT,
    );
    pub fn cblas_strmm_oop(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        B: *const f32,
        ldb: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
    );
    pub fn cblas_strsm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        B: *mut f32,
        ldb: MKL_INT,
    );
    pub fn cblas_strsm_oop(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        B: *const f32,
        ldb: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
    );
    pub fn cblas_strsm_batch(
        Layout: CBLAS_LAYOUT,
        Side_Array: *const CBLAS_SIDE,
        Uplo_Array: *const CBLAS_UPLO,
        TransA_Array: *const CBLAS_TRANSPOSE,
        Diag_Array: *const CBLAS_DIAG,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        alpha_Array: *const f32,
        A_Array: *mut *const f32,
        lda_Array: *const MKL_INT,
        B_Array: *mut *mut f32,
        ldb_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_strsm_batch_strided(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *mut f32,
        ldb: MKL_INT,
        strideb: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_dgemm(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        B: *const f64,
        ldb: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
    );
    pub fn cblas_dgemm_batch(
        Layout: CBLAS_LAYOUT,
        TransA_Array: *const CBLAS_TRANSPOSE,
        TransB_Array: *const CBLAS_TRANSPOSE,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        K_Array: *const MKL_INT,
        alpha_Array: *const f64,
        A_Array: *mut *const f64,
        lda_Array: *const MKL_INT,
        B_Array: *mut *const f64,
        ldb_Array: *const MKL_INT,
        beta_Array: *const f64,
        C_Array: *mut *mut f64,
        ldc_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_dgemm_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *const f64,
        ldb: MKL_INT,
        strideb: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_dgemmt(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        B: *const f64,
        ldb: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
    );
